--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3'
 services:
   app:
+    depends_on:
+      - db
+      - redis
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,8 +13,6 @@ services:
     volumes:
       - '.:/app'
       - bundle:/app/vendor/bundle
-    depends_on:
-      - db
     environment:
       - RAILS_ENV=development
       - POSTGRES_USER=rapidticket
@@ -23,6 +24,14 @@ services:
     environment:
       - POSTGRES_USER=rapidticket
       - POSTGRES_PASSWORD=XEsSBz25n7Upq8nT
+  redis:
+    image: redis:7
+    command: redis-server
+    expose:
+      - 6379
+    volumes:
+      - redis:/data
 volumes:
   postgres:
   bundle:
+  redis:
